@@ -1,3 +1,8 @@
+2011-03-21  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
+
+	* testsuite/22_locale/num_put/put/char/14220.cc: Don't xfail on
+	sparc*-sun-solaris2.10 && lp64.
+
 2011-03-16  Benjamin Kosnik  <bkoz@redhat.com>
 
         * src/Makefile.am: Add functional.cc, shared_ptr.cc.
